# DAQ-Technical-Assessment

./: .gitmodules  brainstorming.md
firmware/: CMakeLists.txt  Dockerfile  answer.txt
firmware/solution/: CMakeLists.txt  canParser.cpp  canParser.h  main.cpp
firmware/tests/: CMakeLists.txt  tests.cpp
